Respect PinchHandler min/maximumPointCount props with native gestures

QNativeGestureEvent::fingerCount() is new in 6.2, and on Wayland
touchpads it's actually populated, so we can now do this.

Fixes: QTBUG-95070
Pick-to: 6.2
Change-Id: Ia365ff34003be8ae8f7f860c195f08b66f6c4a4e
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>